--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ header, footer, main{
 }
 
 header{
-    height: 40vh;
+    height: 60vh;
 }
 
 footer{
@@ -24,7 +24,7 @@ footer{
 /* items */
 h1{
     font-size: 3rem;
-    color: darkblue;
+    color: wheat;
     font-weight: 500;
     margin: 5% 0 0 0;
     font-family: 'Dela Gothic One', sans-serif;
@@ -36,14 +36,13 @@ h2{
 }
 
 nav{
-    height: 20%;
+    height: 10%;
 }
 
 nav, ul{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-direction: column;
     flex-direction: row;
     width: 100%;
     background-color: aqua;
@@ -51,6 +50,7 @@ nav, ul{
 
 ul{
     height: 90%;
+    font-weight: 900;
 }
 
 span{
@@ -60,14 +60,24 @@ span{
 }
 
 p{
-    margin: 10px 0px 10px 0px;
+    margin: 30px 0px 30px 0px;
+}
+
+section{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch;
+    flex-direction: column;
 }
 
 /*ids*/
 #borad{
-    height: 80%;
+    height: 90%;
     width: 100%;
     background-color: beige;
+    background-image: url("../image/legendary-muffin-logo.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 #li-c{
@@ -79,4 +89,27 @@ p{
 
 #life-div{
     padding: 10px;
+}
+
+#lfm{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: start;
+    flex-direction: column;
+    list-style-type: square;
+    background-color: #ffffff00;
+    margin: 30px 10px 30px 20px;
+}
+
+.ct-f{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: start;
+    flex-direction: column;
+    width: 90%;
+    background-color: aqua;
+    padding: 20px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
 }
