--- a/style/style.css
+++ b/style/style.css
@@ -67,12 +67,6 @@ ul{
     font-weight: 900;
 }
 
-span{
-    width: 1px;
-    height: 100%;
-    background-color: black;
-}
-
 p{
     margin: 30px 0px 30px 0px;
 }
@@ -156,6 +150,12 @@ textarea{
 }
 
 /* class */
+
+.midline{
+    width: 1px;
+    height: 100%;
+    background-color: black;
+}
 
 .ct-f{
     display: flex;
