--- a/style/style.css
+++ b/style/style.css
@@ -162,12 +162,13 @@ textarea{
     justify-content: space-evenly;
     align-items: start;
     flex-direction: column;
-    width: 95%;
+    width: 100%;
     background-color: #eca740;
     padding: 20px;
     border-style: solid;
     border-color: black;
     border-width: 2px;
+    box-sizing: border-box;
 }
 
 .fitwidth{
