--- a/style/style.css
+++ b/style/style.css
@@ -69,6 +69,8 @@ ul{
 
 p{
     margin: 30px 0px 30px 0px;
+    line-height: 1.5em;
+    clear: both;
 }
 
 section{
@@ -76,6 +78,7 @@ section{
     justify-content: space-evenly;
     align-items: stretch;
     flex-direction: column;
+    clear: both;
 }
 
 input, textarea{
@@ -185,4 +188,5 @@ textarea{
 .menu-btn:hover{
     font-size: 30px;
     color: #866431;
+    cursor: pointer;
 }
